--- a/cog.yaml
+++ b/cog.yaml
@@ -21,6 +21,7 @@ build:
   - "xgboost==1.3.3"
   - "scikit-learn==0.24.1"
   - "scikit-optimize==0.8.1"
+  - "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz"
 
   # commands run after the environment is setup
   # run:
